# zero

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  filter.txt  sqlx-data.json
.sqlx/: query-f0420cb75f940850be2f9bd79269e7a0031755a174be474d2eb7997058e7a866.json
migrations/: 20240101000000_initial.sql  20240501000000_add_comments_count.sql
src/: main.rs
src/models/: comment.rs  post.rs
src/routes/: comment.rs  filter.rs  mod.rs  post.rs
src/schema/: response.rs
src/utils/: error.rs  filter.rs  mod.rs  pagination.rs  sanitize.rs
static/: debug.html  index.html
static/assets/css/: style.css
static/assets/js/: app.js  comment-enhancements.js  error-handler.js  main.js  ui-effects.js  utils.js
