[package]
name = "zero"
version = "1.1.1"
edition = "2021"

[dependencies]
# Axum web framework and its extensions
axum = { version = "0.6", features = ["headers", "macros"] }
axum-extra = { version = "0.7" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = [
  "fs",
  "trace",
  "cors",
  "compression-gzip",
  "compression-br",
  "set-header",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "uuid",
  "json",
] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4.0"
tempfile = "3.8.0"
html-escape = "0.2.13"
ammonia = "4"
